# benchmark-api

./: .env.example  README.md  lint.sh  pyproject.toml  pyrightconfig.json  ruff.toml
src/: benchmark.py  download_data.py  graph_tests.ipynb
